[gd_scene load_steps=2 format=3 uid="uid://qgehgcct3v3x"]

[ext_resource type="Script" uid="uid://c4ost1hsrsd2v" path="res://scripts/ui/item_card_reward_popup.gd" id="1_3g8xv"]

[node name="ItemCardRewardPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3g8xv")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="PopupPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="PopupPanel/VBoxContainer"]
layout_mode = 2
text = "获得情报卡！"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PopupPanel/VBoxContainer"]
layout_mode = 2

[node name="CardContainer" type="Control" parent="PopupPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CardDisplay" type="Control" parent="PopupPanel/VBoxContainer/CardContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -85.0
offset_right = 264.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2

[node name="CardInfo" type="VBoxContainer" parent="PopupPanel/VBoxContainer"]
layout_mode = 2

[node name="CardName" type="Label" parent="PopupPanel/VBoxContainer/CardInfo"]
layout_mode = 2
text = "情报卡名称"
horizontal_alignment = 1

[node name="CardAttributes" type="Label" parent="PopupPanel/VBoxContainer/CardInfo"]
layout_mode = 2
text = "属性加成"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="PopupPanel/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="PopupPanel/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="PopupPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "确定"
